# fierymud

./: .clang-format  .editorconfig  .env  .env.example  .gitignore  Analysis.md  CLAN_SCRIPTING.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.blah  CMakeLists_modern.txt  CONVENTIONS.md  PLAN.md  README.md  TASKS.md  TESTING_ROADMAP.md  act.informative.c  autorun  build.sh  chars.c  cooldowns.c  debug_movement.cpp  debug_test.cpp  errors.txt  format.sh  main.cpp  mob_stats.csv  mobact.c  rules.md  run_tests.sh  run_tests_safe.sh  setup_tls_certs.sh  spell_parser.c  spells.c  spells.h  structs.h  task.md  test_bread_issue.cpp  test_enum.cpp  test_freeze.sh  (+5 more)
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: c-cpp.yml
.serena/: project.yml
.serena/memories/: build_and_run_commands.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
certs/: dhparams.pem  server.crt  server.csr  server.key
cmake/: version.cmake
config/: dev.json  prod.json  test.json  test_mud.json
docs/: ARCHITECTURE_ANALYSIS.md  BUILDER_FLAGS.md  COLOR_CODES_LEGACY.md  COLOR_CODES_MODERN.md  COLOR_CODES_XMLLITE.md  COLOR_SYSTEM_COMPARISON.md  COMMAND_IMPLEMENTATION_PLAN.md  DATABASE_REQUIREMENTS.md  DESIGN.md  LEGACY_MESSAGING_PATTERNS.md  LUA_SCRIPTING.md  LUA_SCRIPTING_API.md  MESSAGE_TEMPLATE_SYSTEM.md  MOB_DATA_MAPPING.md  MUD_FILE_FORMATS.md  README.md  WORLD_JSON_FORMAT.md  WORLD_SYSTEMS_IMPLEMENTATION.md
docs/data-formats/: MUD_FILE_FORMATS.md
docs/design/: MINION_SYSTEM.md  data-driven-dot-system.md
docs/development/: PLAN.md  TEST_PLAN.md
docs/game-systems/: ABILITIES.md  ABILITIES_COMPLETE.md  ABILITIES_IMPLEMENTATION_EXAMPLES.md  ABILITIES_INDEX.md  ABILITY_EFFECTS_ENHANCEMENT.md  ALIGNMENT_DAMAGE_EXAMPLES.md  CORE_MECHANICS.md  DAMAGE_SPELL_FORMULAS.md  EFFECTS_REVIEW.md  EFFECT_FLAGS_REFERENCE.md  EFFECT_SYSTEM_SUMMARY.md  EFFECT_TYPES_QUICK_REFERENCE.md  ELEMENT_TYPES.md  MAGIC_SYSTEM_COMPLETENESS.md  PLAYER.md  PROPOSED_ABILITY_SYSTEM.md  README.md  SKILL_CONFIGURABILITY.md  SKILL_SYSTEM.md  SKILL_SYSTEM_IMPROVEMENTS.md  SPELL_CONFIGURABILITY.md  SPELL_PARAMS_SCHEMA.md  SPELL_SYSTEM.md  SPELL_SYSTEM_IMPROVEMENTS.md
docs/legacy-analysis/: LEGACY_SPELLS.md  MOB_HP_FORMULA.md  MOB_STAT_CALCULATION.md  RACE_CLASS_FACTORS.md  SPELL_ABILITY_FORMATTING.md
docs/migration/: COMBAT_CLARIFICATIONS.md  COMBAT_EVASION_EXPANSION.md  COMBAT_REVERSE_ENGINEERING.docx  COMBAT_REVERSE_ENGINEERING.html  COMBAT_REVERSE_ENGINEERING.md  COMBAT_SNAPSHOT.md
docs/reference/: SKILL_ANALYSIS_README.md  SKILL_SYSTEM_ANALYSIS.md  abilities.csv  abilities_original.csv  conceptual_spell_idl.ts  (+7 more)
hooks/: install.sh  pre-commit
include/: act.hpp  ai.hpp  arguments.hpp  board.hpp  casting.hpp  chars.hpp  charsize.hpp  clan.hpp  class.hpp  cleric.hpp  comm.hpp  commands.hpp  composition.hpp  conf.hpp  constants.hpp  cooldowns.hpp  corpse_save.hpp  damage.hpp  db.hpp  defines.hpp  dg_olc.hpp  dg_scripts.hpp  directions.hpp  diskio.hpp  editor.hpp  effects.hpp  events.hpp  exits.hpp  fight.hpp  fight_msgs.hpp  find.hpp  genzon.hpp  handler.hpp  house.hpp  interpreter.hpp  legacy_structs.hpp  lifeforce.hpp  limits.hpp  logging.hpp  magic.hpp  (+43 more)
logs/: claude-nights-watch-daemon.pid  claude-nights-watch-start-time
mudlet/: fierymud_0_1.mpackage
scripts/: 30.json  README.md  add_effect_types.py  add_look_messages.sql  analyze_room_refs.py  analyze_world_data.py  convert_to_modern.py  dev-watch.sh  extract_abilities.py  extract_comprehensive_skill_data.py  extract_skill_metadata.py  fierymud_tools.py  fix_missing_objects.py  generate_db_headers.py  lib  mob_to_ascii.py  mob_to_json.py  mudfile_to_json.py  player_objects.py  player_to_json.py  pyproject.toml  readItemFiles.py  test_mssp.py  test_mud.sh  update_abilities_md.py  world_to_json.py
scripts/commands/: __init__.py  base.py  info.py  player.py  validate.py  world.py  world_mappings.py
scripts/mud/: __init__.py  base.py  bitflags.py  flags.py  mob.py  mudfile.py  obj.py  parser.py  player.py  player_notes.py  player_objects.py  player_pets.py  player_quests.py  plr_objs.py  shop.py  validator_visitor.py  world.py  zone.py
scripts/mud/types/: __init__.py  mob.py  notes.py  object.py  pet.py  player.py  quests.py  shop.py  trigger.py  world.py  zone.py
scripts/mud_objects/: __init__.py  flags.py  mob.py  mudobject.py  object.py
scripts/mud_objects/utils/: __init__.py  bitflags.py
src/: Makefile  Makefile.d  act.clan.cpp  act.comm.c  act.comm.cpp  act.get.c  act.get.cpp  act.h  act.hpp  act.informative.c  act.informative.cpp  act.item.c  act.item.cpp  act.movement.c  act.movement.cpp  act.offensive.c  act.offensive.cpp  act.other.c  act.other.cpp  act.social.c  act.social.cpp  act.wizard.c  act.wizard.cpp  act.wizinfo.c  act.wizinfo.cpp  ai.h  ai.hpp  ai_utils.c  ai_utils.cpp  arguments.cpp  arguments.hpp  ban.c  ban.cpp  ban.hpp  bitflags.cpp  bitflags.hpp  board.c  board.cpp  board.h  board.hpp  (+317 more)
test_results/: performance_20250827_113846.json  stability_20250827_001252.json  stability_20250827_001744.json
tests/: MIGRATION_GUIDE.md  README.md  TESTING_GUIDE.md  TESTING_REFERENCE.md  function_reg_2  function_reg_2.cpp  mock_game_session.cpp  mock_game_session.hpp  test_actor.cpp  test_arguments.cpp  test_character_creation_sessions.cpp  test_clan_basic.cpp  test_clan_permissions.cpp  test_clan_snoop.cpp  test_combat_system.cpp  test_command_system.cpp  test_command_system_integration.cpp  test_container_system.cpp  test_container_system_simple.cpp  test_core.cpp  test_core_foundation.cpp  test_emotes.cpp  test_error_handling.cpp  test_function_registration  test_function_registration.cpp  test_gmcp.cpp  test_harness.hpp  test_harness_usage.cpp  test_mobile_keywords.cpp  test_multiplayer.cpp  test_multiplayer_interaction.cpp  test_object_descriptions.cpp  test_object_interactions.cpp  test_performance.cpp  test_player_revival.cpp  test_server_resilience.cpp  test_session.cpp  test_session_integration.cpp  test_session_lifecycle.cpp  test_test_harness.cpp  (+7 more)
(+9300 files in other folders)
